<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ui_blue_stdframe"
    android:padding="@dimen/dialog_margin" >

    <TextView
        android:id="@+id/levelup_title"
        style="@style/titleWithIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_blue_richframe"
        android:drawableLeft="@drawable/char_hero"
        android:text="@string/levelup_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/levelup_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ui_blue_stdframe"
            android:text="@string/levelup_description" />

        <LinearLayout
            style="@style/AndorsTrail_Blue_StdFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/levelup_add_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_health" />

            <Button
                android:id="@+id/levelup_add_attackchance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_attackchance" />

            <Button
                android:id="@+id/levelup_add_attackdamage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_attackdamage" />

            <Button
                android:id="@+id/levelup_add_blockchance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_blockchance" />

            <TextView
                android:id="@+id/levelup_adds_new_skillpoint"
                style="@style/textWithIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ui_icon_skill"
                android:text="@string/levelup_adds_new_skillpoint" />

            <!-- Workaround http://code.google.com/p/andors-trail/issues/detail?id=242 -->

            <ListView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>