<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="@dimen/dialog_margin"
	android:orientation="vertical"
	>

	<TextView
		android:id="@+id/loadsave_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/loadsave_title_save"
		style="@style/titleWithIcon"
		android:gravity="center"
		android:background="@drawable/ui_blue_richframe"
		/>

	<TextView
		android:id="@+id/loadsave_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/loadsave_selectslot"
		android:textColor="@color/ui_blue_textbutton_textcolor"
		android:background="@drawable/ui_blue_stdframe"
		/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		style="@style/AndorsTrail_Blue_StdFrame"
		>
		<LinearLayout
			android:id="@+id/loadsave_slot_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<Button
				android:id="@+id/loadsave_slot_n"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@android:string/unknownName"
				android:layout_marginTop="2dp"
				android:layout_marginBottom="2dp"
				/>
		</LinearLayout>

	</ScrollView>

	<LinearLayout
			android:id="@+id/loadsave_save_to_new_slot_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			style="@style/AndorsTrail_Blue_StdFrame"
			>
			<Button
				android:id="@+id/loadsave_save_to_new_slot"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/loadsave_save_to_new_slot"
				/>
		</LinearLayout>
	
	
</LinearLayout>
