<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/dialog_margin"
		style="@style/AndorsTrail_Blue_StdFrame"
		>

		<TextView
			android:id="@+id/monsterencounter_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_monsterencounter_title"
			style="@style/titleWithIcon"
			android:background="@drawable/ui_blue_richframe"
			android:gravity="center"
			android:drawableLeft="@drawable/equip_weapon"
			/>

		<TextView
			android:id="@+id/monsterencounter_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_monsterencounter_message"
			/>
	</LinearLayout>

	<!-- Workaround http://code.google.com/p/andors-trail/issues/detail?id=242 -->
	<ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@android:color/transparent"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		style="@style/AndorsTrail_Blue_StdFrame"
		>
		<Button
			android:id="@+id/monsterencounter_attack"
			android:layout_width="match_parent"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@android:string/yes"
			/>

		<Button
			android:id="@+id/monsterencounter_info"
			android:layout_width="match_parent"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/dialog_monsterencounter_info"
			/>

		<Button
			android:id="@+id/monsterencounter_cancel"
			android:layout_width="match_parent"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@android:string/no"
			/>
	</LinearLayout>
</LinearLayout>
